unpackaged/main/default/objects/Early_Adopter__c/Early_Adopter__c.object-meta.xml
<CustomObject>
    <label>Early Adopter</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Early Adopter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Early Adopter</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>