unpackaged/main/default/objects/Early_Adopter__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Account linked to</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Early Adopter</relationshipLabel>
    <relationshipName>Early_Adopter</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>