unpackaged/main/default/objects/Early_Adopter__c/fields/Approved_for_Early_Adopter_program__c.field-meta.xml
<CustomField>
    <fullName>Approved_for_Early_Adopter_program__c</fullName>
    <label>Approved for Early Adopter program?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Customer not participated</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Approved prior to Evolve</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>