unpackaged/main/default/objects/Early_Adopter__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>R&amp;D(Alpha)</fullName>
            </value>
            <value>
                <fullName>LD(Beta)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>