unpackaged/main/default/objects/Early_Adopter__c/fields/Conference_attended__c.field-meta.xml
<CustomField>
    <fullName>Conference_attended__c</fullName>
    <label>Conference attended</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Evolve 2014</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>