unpackaged/main/default/objects/Early_Adopter__c/fields/Confirmation_Received__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Received confirmation from customer that technical requirements are met?</description>
    <inlineHelpText>Received confirmation from customer that technical requirements are met?</inlineHelpText>
    <label>Confirmation Received</label>
    <type>Checkbox</type>
</CustomField>