unpackaged/main/default/objects/Early_Adopter__c/fields/Customer_Contact_for_Program__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_for_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer Contact for Program</description>
    <label>Customer Contact for Program</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Early Adopter</relationshipLabel>
    <relationshipName>Early_Adopter</relationshipName>
    <type>Lookup</type>
</CustomField>