unpackaged/main/default/objects/Early_Adopter__c/fields/Date_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Date_Reviewed__c</fullName>
    <label>Date Reviewed?</label>
    <type>Date</type>
</CustomField>