unpackaged/main/default/objects/Early_Adopter__c/fields/Date_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Date_Scheduled__c</fullName>
    <inlineHelpText>Date customer is scheduled for installation</inlineHelpText>
    <label>Date Scheduled?</label>
    <type>Date</type>
</CustomField>