unpackaged/main/default/objects/Early_Adopter__c/fields/Early_Adopter_Count__c.field-meta.xml
<CustomField>
    <fullName>Early_Adopter_Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Early Adopter Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>