unpackaged/main/default/objects/Early_Adopter__c/fields/Expected_Timeline_from__c.field-meta.xml
<CustomField>
    <fullName>Expected_Timeline_from__c</fullName>
    <label>Expected Timeline from</label>
    <type>Date</type>
</CustomField>