unpackaged/main/default/objects/Early_Adopter__c/fields/Expected_Timeline_to__c.field-meta.xml
<CustomField>
    <fullName>Expected_Timeline_to__c</fullName>
    <label>Expected Timeline to</label>
    <type>Date</type>
</CustomField>