unpackaged/main/default/objects/Early_Adopter__c/fields/Group_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Group_Assigned__c</fullName>
    <label>Group Assigned</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>G1 - April 2014</fullName>
            </value>
            <value>
                <fullName>G2 - May 2014</fullName>
            </value>
            <value>
                <fullName>G3 - June 2014</fullName>
            </value>
            <value>
                <fullName>G4 - July 2014</fullName>
            </value>
            <value>
                <fullName>G5 - August 2014</fullName>
            </value>
            <value>
                <fullName>G6 - September 2014</fullName>
            </value>
            <value>
                <fullName>G7 - October 2014</fullName>
            </value>
            <value>
                <fullName>G8 - November 2014</fullName>
            </value>
            <value>
                <fullName>G9 -  December 2014</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>