unpackaged/main/default/objects/Early_Adopter__c/fields/Name_of_Program__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Program__c</fullName>
    <label>Program Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CiAnywhere - on Premise</fullName>
            </value>
            <value>
                <fullName>CiAnywhere - Cloud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>