unpackaged/main/default/objects/Early_Adopter__c/fields/Next_Action__c.field-meta.xml
<CustomField>
    <fullName>Next_Action__c</fullName>
    <label>Next Action?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>