unpackaged/main/default/objects/Early_Adopter__c/fields/people_attended__c.field-meta.xml
<CustomField>
    <fullName>people_attended__c</fullName>
    <label># people attended?</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>