unpackaged/main/default/objects/Early_Adopter__c/fields/Performance_Improvement_Applied__c.field-meta.xml
<CustomField>
    <fullName>Performance_Improvement_Applied__c</fullName>
    <label>Performance Improvement Applied</label>
    <type>Date</type>
</CustomField>