unpackaged/main/default/objects/Early_Adopter__c/fields/Performance_Issue_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Performance_Issue_Resolved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Performance Issue Resolved</label>
    <type>Checkbox</type>
</CustomField>