unpackaged/main/default/objects/Early_Adopter__c/fields/Reason_Notes__c.field-meta.xml
<CustomField>
    <fullName>Reason_Notes__c</fullName>
    <label>Reason Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>