unpackaged/main/default/objects/Early_Adopter__c/fields/Reviewed_by__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_by__c</fullName>
    <label>Reviewed by?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>