unpackaged/main/default/objects/Early_Adopter__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending commencement</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>On hold</fullName>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
            <value>
                <fullName>Installed in Test/Dev</fullName>
            </value>
            <value>
                <fullName>Installed in Prod</fullName>
            </value>
            <value>
                <fullName>Installed in both Dev and Prod</fullName>
            </value>
            <value>
                <fullName>Registered Interest</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>