unpackaged/main/default/objects/Early_Adopter__c/fields/Technical_Spec__c.field-meta.xml
<CustomField>
    <fullName>Technical_Spec__c</fullName>
    <label>Technical Spec sent</label>
    <type>Date</type>
</CustomField>