unpackaged/main/default/objects/Early_Adopter__c/fields/Technical_Spec_received__c.field-meta.xml
<CustomField>
    <fullName>Technical_Spec_received__c</fullName>
    <description>Received confirmation from customer that technical requirements are met?</description>
    <inlineHelpText>Received confirmation from customer that technical requirements are met?</inlineHelpText>
    <label>Technical Spec received</label>
    <type>Date</type>
</CustomField>