unpackaged/main/default/objects/Early_Adopter__c/fields/TechOne_Contact_for_progam__c.field-meta.xml
<CustomField>
    <fullName>TechOne_Contact_for_progam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>TechOne Contact for Program</description>
    <label>TechOne Contact for Program</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Technology One Employee</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Early Adopter (TechOne Contact for Program)</relationshipLabel>
    <relationshipName>Early_Adopter1</relationshipName>
    <type>Lookup</type>
</CustomField>