unpackaged/main/default/objects/Early_Adopter__c/fields/Why_early_adopter__c.field-meta.xml
<CustomField>
    <fullName>Why_early_adopter__c</fullName>
    <description>Why should this account be an early adopter?</description>
    <inlineHelpText>Enter details as to why this account should be an earlier adopter</inlineHelpText>
    <label>Why early adopter?</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>